# advent-of-code

./: .gitignore  README.md
2022/day01/src/: main.rs
2022/day02/src/: main.rs
2022/day02_pt02/src/: main.rs
2022/day02_v2/src/: main.rs
aoc_2022_rust/: Cargo.toml
aoc_2022_rust/src/: error.rs  icon.rs  input.rs  main.rs
aoc_2022_rust/src/day01/: part01.rs  part02.rs
aoc_2022_rust/src/day02/: mod.rs  part01.rs  part01_v2.rs  part02.rs
aoc_2022_rust/src/day03/: mod.rs  part01.rs  part02.rs
aoc_2022_rust/src/day04/: part01.rs  part02.rs
aoc_2022_rust/src/day05/: part01.rs
aoc_2023_rust/: Cargo.toml
aoc_2023_rust/src/: main.rs
aoc_2023_rust/src/day01/: part01.rs  part02.rs
aoc_2023_rust/src/day02/: part01.rs  part02.rs
aoc_2023_rust/src/day03/: part01.rs  part02.rs
aoc_2023_rust/src/day04/: part01.rs  part02.rs
aoc_2023_rust/src/day05/: part01.rs  part02.rs
rust/2022/day01_pt01/: Cargo.toml
rust/2022/day02_pt01/: Cargo.toml
rust/2022/day02_pt01/src/: main.rs
rust/2022/day02_pt01_v2/: Cargo.toml
rust/2022/day02_pt01_v2/src/: main.rs
rust/2022/day02_pt02/: Cargo.toml
