[package]
name = "aoc_2022_rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "day01_part01"
path = "src/bin/day01/part01/main.rs"

[[bin]]
name = "day01_part02"
path = "src/bin/day01/part02/main.rs"
